<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notifications"
        />
    <item
        android:id="@+id/Chats"
        android:title="@string/chats"
        android:icon="@drawable/ic_chat"
        />
    <item
        android:id="@+id/Rooms"
        android:title="@string/rooms"
        android:icon="@drawable/ic_room"
        />
    <item
        android:id="@+id/Assignment"
        android:title="@string/assignment"
        android:icon="@drawable/ic_assignment"
        />
    <item
        android:id="@+id/Calender"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        />
</menu>
