<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".AuthenticationActivities.RegisterActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/action_bar"
        android:layout_alignParentTop="true"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo" />
        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:paddingTop="40dp"
            android:textAlignment="center"
            android:text="@string/create_your_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <ScrollView
        android:paddingBottom="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="45dp"
        android:layout_below="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_marginBottom="15dp"
                        android:id="@+id/register_email_input"
                        android:textSize="14sp"
                        android:lines="1"
                        android:paddingEnd="25dp"
                        android:hint="@string/email_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no" />
                    <ProgressBar
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/register_email_loader"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_marginHorizontal="5dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <EditText
                    android:layout_marginBottom="15dp"
                    android:id="@+id/register_first_name"
                    android:textSize="14sp"
                    android:lines="1"
                    android:hint="@string/first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:autofillHints="" />
                <EditText
                    android:layout_marginBottom="15dp"
                    android:id="@+id/register_last_name"
                    android:textSize="14sp"
                    android:lines="1"
                    android:hint="@string/last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:importantForAutofill="no" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_marginBottom="15dp"
                        android:id="@+id/register_password"
                        android:textSize="14sp"
                        android:lines="1"
                        android:hint="@string/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" />
                    <ProgressBar
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/register_password_loader"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_marginHorizontal="5dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:layout_marginBottom="15dp"
                        android:id="@+id/register_confirm_password"
                        android:textSize="14sp"
                        android:lines="1"
                        android:hint="@string/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:importantForAutofill="no" />
                    <ProgressBar
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:id="@+id/register_confirm_password_loader"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_marginHorizontal="5dp"
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>

            </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <Button
            android:id="@+id/register_next"
            android:textAllCaps="false"
            android:text="@string/next"
            app:cornerRadius="25dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>