<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".AuthenticationActivities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/action_bar"
        android:layout_alignParentTop="true"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_logo" />
        <TextView
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:paddingTop="40dp"
            android:textAlignment="center"
            android:text="Log in to Connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_below="@id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_marginBottom="15dp"
            android:id="@+id/login_email_input"
            android:textSize="14sp"
            android:lines="1"
            android:hint="@string/email_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />
        <EditText
            android:layout_marginBottom="15dp"
            android:id="@+id/login_password"
            android:textSize="14sp"
            android:lines="1"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:importantForAutofill="no" />
    </LinearLayout>
    <RelativeLayout
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"/>
        <Button
            android:id="@+id/login_next"
            android:textAllCaps="false"
            android:text="@string/next"
            app:cornerRadius="25dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/login_forgot_password_button"
            android:clickable="true"
            android:padding="10dp"
            android:layout_centerInParent="true"
            android:textAllCaps="false"
            android:text="Forgot password?"
            app:cornerRadius="25dp"
            android:layout_alignParentStart="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</RelativeLayout>